fixed header overflow for show page

--- a/app/assets/stylesheets/layouts/_common-top.scss
+++ b/app/assets/stylesheets/layouts/_common-top.scss
@@ -14,10 +14,12 @@
 
   h1 {
     margin: 0;
-    padding: 12px 0;
+    padding: 12px;
     text-align: center;
     color: #fff;
     font-size: 20px;
+    height: 35px;
+    overflow: hidden;
   }
 }
 
